@@ -2,51 +2,66 @@
 
 # SJson
 
-SJson is a **lightweight tailer made json parser for server side workloads**. It provides optimized memory and performance with below goals.
+**SJson** is a lightweight, high-performance JSON parser built for server-side Java. Designed for REST APIs and microservices, it delivers faster parsing with lower memory usage using native Java structures.
 
-## Design Goals
+---
 
-1. Optimized for Serialization, Deserialization and validation.
-2. Represent Json in native java format.
-3. No external dependencies
-4. Trust the validity of json documents. It is just enough to say invalid, reasoning is optional
-5. Utilize latest java features
+## ⚡ Key Features
 
-**Note:** This is **not** general purpose parser. This is specifically written for REST API use cases. 
+- 🚫 No external dependencies
+- 📦 Uses native Java types (`Map`, `List`, etc.)
+- 🚀 Optimized for fast serialization & deserialization
+- ✅ Assumes valid JSON (minimal validation overhead)
+- 🧠 Clean, modern, and extendable Java code
 
-1. Service to Service Communications in microservices
-2. Client SDK such as Elastic REST Client.
+> 💡 **Note:** SJson is purpose-built for backend systems—not a general-purpose parser.
 
-## Usage
+Here’s the updated section with **Data Engineering workloads** added, keeping it concise and aligned with the tone:
 
-Include below in your pom.xml
+---
+
+### Ideal For
+
+- Microservices: Service-to-service communication
+- Client SDKs: Lightweight JSON processing (e.g., Elastic clients)
+- Data Engineering: ETL pipelines, streaming ingestion, compact intermediate JSON parsing
+
+---
+
+Would you also like a brief usage example in a data processing context (like parsing large streaming JSON records)?
+
+---
+
+## 📦 Maven Dependency
 
 ```xml
 <dependency>
    <groupId>com.techatpark.sjson</groupId>
    <artifactId>json-parser</artifactId>
    <version>{{version}}</version>
-<dependency>
+</dependency>
 ```
 
-To read JSON as Java Object
+---
+
+## 🛠️ Usage Example
 
 ```java
-Object obj = Json.read(new StringReader("{ \"abc\" : \"def\" }")); // returns Map<String, Object>
-Object arr = Json.read(new StringReader("[1,true,{ \"abc\" : \"def\" }]")); // returns List<Object>
+import java.io.StringReader;
+
+// Parse JSON Object
+Object obj = Json.read(new StringReader("{ \"abc\" : \"def\" }"));  // Map<String, Object>
+
+// Parse JSON Array
+Object arr = Json.read(new StringReader("[1, true, { \"abc\" : \"def\" }]"));  // List<Object>
 ```
 
-## Development
+---
 
-Below VM Options should be added for JVM. This is required to calculate the size of the objects
+## 🎓 Learning Resource
 
-```shell
--javaagent:<<PATH_TO_JAR>>/jamm-0.4.1.jar --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED
-```
-## How it works
+SJson was featured at the **Bangalore Open Source Java User Group** to teach students the internals of JSON parsers.
 
-SJson was part of the tech talk series at Bangalore Opensource Java User Group. This will give an idea behind this work.
+📺 **Watch the tech talk** (video coming soon)
 
-1. Setup : https://www.youtube.com/watch?v=q_1H8ZJceA8
-2. Optimization: https://www.youtube.com/watch?v=XMRaLCRfvlQ
-3. Collection: https://www.youtube.com/watch?v=tMgy5PxPFQ4
+---
